# Maengelmelder-Konstanz

./: .coveragerc  .gitignore  README.md  beispieldaten.csv  fetch.py  maengelmelder_konstanz.csv  main.py  nlp_analyse.py  preprocess.py  requirements.txt  stopwords_de.txt  topics.py
.github/workflows/: ci.yml
Maengelmelder-Konstanz/: CHANGELOG.md  LICENSE  README.md  deploy_complete.sh.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
Maengelmelder-Konstanz/data/: maengelmelder_konstanz.csv
Maengelmelder-Konstanz/src/: fetch.py  main.py  nlp_analyse.py  preprocess.py  topics.py
Maengelmelder-Konstanz/tests/: conftest.py  test_fetch.py
Stoppwörter/: stopwords_de.txt
data/: maengelmelder_konstanz.csv
data/raw/: maengelmelder_konstanz.csv
nlp/: __init__.py  fetch.py  preprocess.py  topics.py
resources/: stopwords_de.txt
src/: __init__.py  analyzer.py  config.py  data_loader.py  fetch.py  main.py  nlp_analyse.py  preprocess.py  preprocessor.py  topic_modeler.py  topic_optimizer.py  topics.py  utils.py  vectorizer.py  visualizer.py
tests/: test_preprocess.py
