[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maengelmelder-konstanz"
version = "1.0.0"
description = "NLP-Analyse von Bürgerbeschwerden aus Konstanz"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "nltk>=3.8.1,<4.0.0",
    "spacy>=3.7.0,<4.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "wordcloud>=1.9.3,<2.0.0",
    "pyLDAvis>=3.4.1,<4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov=src"]
